--- a/src/input.css
+++ b/src/input.css
@@ -472,16 +472,11 @@
 
     .cs-admin-breadcrumb {
         @apply
-        cs-fs-sm
-            font-thin
+        cs-fs-xs
+        font-thin
         text-cs-breadcrumb
         transition-colors duration-300
         hover:text-slate-800
-    }
-
-    #sidebar ul li a.active {
-        background: #1f2937;
-        background-color: #1f2937;
     }
 
     .cs-sidebar {
@@ -496,6 +491,12 @@
         -webkit-transition: all 300ms cubic-bezier(0, 0.77, 0.58, 1);
         transition: all 300ms cubic-bezier(0, 0.77, 0.58, 1);
     }
+
+    .cs-sidebar ul li a.active {
+        background: #1f2937;
+        background-color: #1f2937;
+    }
+
 
     .cs-sidebar.show {
         transform: translateX(0);
