--- a/src/input.css
+++ b/src/input.css
@@ -137,17 +137,13 @@
     /* not a parameter, but cannot be placed in HTML */
     .cs-menu-item:hover > .cs-menu-item-span:after {
         @apply
-        w-0
-        left-1/2
-        md:w-full
-        md:left-0;
+        w-0 left-1/2 md:w-full md:left-0;
     }
 
     /** rule for mobile menu */
     .cs-menu-item.cs-active > .cs-menu-item-span:after {
         @apply
-        w-full
-        left-0;
+        left-0 w-full;
     }
 
     /*  L1, L2, L3 menu items height  (desktop & mobile)*/
@@ -246,10 +242,7 @@
 
     .cs-mobile-menu-footer-item {
         @apply
-            cs-fs-badge
-            py-5 border-b
-            border-cs-red-main
-            tracking-wide;
+            py-5 tracking-wide border-b cs-fs-badge border-cs-red-main;
     }
 
     /* testimonials badge (desktop) */
@@ -448,8 +441,9 @@
         @apply sm:ml-5;
     }
 
+    /* #### ADMIN NAVBAR #### */
 
-    /* whole navbar features (desktop & mobile) */
+    /* whole Admin navbar features (desktop & mobile) */
     .cs-admin-header {
         @apply
         h-20  /* [param] header height (desktop, mobile) */
@@ -489,13 +483,7 @@
 
     .cs-sidebar {
         @apply
-        w-full
-        md:w-3/4
-        bg-cs-blue-main
-        pt-6
-        pb-8
-        sm:max-w-xs
-        lg:w-80;
+        w-full pt-6 pb-8 md:w-3/4 bg-cs-blue-main sm:max-w-xs lg:w-80;
         -webkit-transition: all 300ms cubic-bezier(0, 0.77, 0.58, 1);
         transition: all 300ms cubic-bezier(0, 0.77, 0.58, 1);
     }
@@ -527,7 +515,7 @@
     }
 
     .cs-admin-submenu a:before {
-        @apply -mt-5 block w-5 h-5;
+        @apply block w-5 h-5 -mt-5;
         content: url("/src/assets/admin-caret.svg");
     }
 
@@ -561,6 +549,7 @@
 
 }
 
+/* #### AUTH FORMS #### */
 
 .cs-form-box {
     @apply
@@ -581,20 +570,21 @@
     items-center
     pt-9
     pb-6
-    px-10;
+    px-8
+    md:px-10;
 }
 
 .cs-form-login-header {
     @apply
     font-serif
     uppercase
-    cs-fs-xl
+    cs-fs-lg
     tracking-[0.45rem]
     text-white
     bg-cs-red-main
     h-28
     pt-12
-    md:px-28
+    md:px-20 /*  greatr than 20 for an effect */
     w-full
     rounded-t-[30px];
 }
@@ -650,7 +640,7 @@
     }
 
     .cs-form-link {
-        @apply font-sans font-bold text-cs-red-main hover:text-cs-red-dark underline;
+        @apply font-sans font-bold underline text-cs-red-main hover:text-cs-red-dark;
     }
 
     .cs-form-label {
@@ -664,28 +654,33 @@
 
     .cs-form-input-container {
         @apply
-        mt-2
-        mb-8
-        w-full;
+        w-full mt-2 mb-8;
     }
 
     .cs-form-input {
         @apply
-        py-2.5
+        py-1.5
         placeholder:text-cs-red-main/50
         autofill:text-cs-red-main/50
-        autofill:cs-fs-base
+        autofill:cs-fs-xs
         text-cs-red-main
         font-semibold
-        cs-fs-base
+        cs-fs-xs
         border-cs-red-main
         border-2
         rounded-l-[30px]
         rounded-r-xl
         bg-cs-paper-shade
-        pl-12
+        pl-4
+        md:pl-12
         w-full
-        md:w-[430px];
+        min-w-[400px]
+        md:w-[550px];
+    }
+
+    .cs-form-input + img
+    {
+        @apply hidden md:block;
     }
 
     .cs-form-submit {
@@ -711,6 +706,8 @@
         disabled:opacity-50
         disabled:shadow-none;
     }
+
+/* #### COURSE REGISTRATION FORMS #### */
 
 .cs-course-container {
     @apply
@@ -852,3 +849,5 @@
     disabled:opacity-50
     disabled:shadow-none;
 }
+
+/* #### USER PERSONAL AREA #### */
