--- a/src/input.css
+++ b/src/input.css
@@ -569,9 +569,9 @@
     flex-col
     items-center
     pt-9
-    pb-6
-    px-2
-    md:px-10;
+    pb-12
+    px-6
+    sm:px-10  /* [param] padding between outer auth form and input textboxes */
 }
 
 .cs-form-login-header {
