--- a/src/input.css
+++ b/src/input.css
@@ -519,8 +519,12 @@
         content: url("/src/assets/admin-caret.svg");
     }
 
-    .cs-admin-submenu-button.cs-active img.cs-menu-item-icon {
+    .cs-admin-submenu-button img.cs-menu-item-icon {
         transform: rotate(-180deg);
+    }
+
+    .cs-admin-submenu-button.cs-active img.cs-menu-item-icon {
+        transform: rotate(0deg);
     }
 
     .cs-admin-form-input {
@@ -705,7 +709,22 @@
         @apply hidden md:block absolute top-2.5 left-4 w-4 h-4;
     }
 
-    .cs-form-submit {
+    .cs-password-eye .hs-password-active {
+        @apply hidden;
+    }
+
+.cs-password-eye.active .hs-password-active,
+.cs-password-eye .hs-password-deactive
+{
+    @apply block;
+}
+
+.cs-password-eye.active .hs-password-deactive,
+.cs-password-eye .hs-password-active {
+     @apply hidden;
+}
+
+.cs-form-submit {
         @apply self-end
         mt-6
         font-sans
@@ -735,20 +754,20 @@
     @apply
     bg-cs-paper-shade
     w-full
-    rounded-b-[30px]
+    md:rounded-b-[30px]
     flex
     flex-col
     items-center
     pt-9
-    pb-6
-    px-4
-    md:px-10;
+    pb-12
+    px-6
+    sm:px-10 /* [param] padding between outer auth form and input textboxes */;
 }
 
     .cs-course-header {
         @apply
         font-sans
-        cs-fs-xl
+        cs-fs-lg
         font-semibold
         text-cs-paper
         bg-cs-red-dark
@@ -757,47 +776,54 @@
         items-baseline
         justify-center
         h-20
-        pt-4
+        pt-6
         md:px-10
         w-full
-        rounded-t-[30px];
+        md:rounded-t-[30px];
     }
 
 .cs-course-input,
 .cs-course-select {
     @apply
-    py-2.5
+    py-1.5
     placeholder:text-cs-red-dark/50
     text-cs-red-dark
     autofill:text-cs-red-dark/50
     autofill:text-cs-red-dark
-    autofill:cs-fs-base
+    autofill:cs-fs-xs
     font-semibold
-    cs-fs-base
+    cs-fs-xs
     border-cs-red-dark
     border-2
     rounded-l-[30px]
     rounded-r-xl
     bg-cs-paper
-    pl-12
-    w-full;
+    pl-4
+    md:pl-12
+    w-full
+    sm:min-w-[400px];
 }
 
-.cs-course-select:focus + .cs-course-arrow svg {
-    transform: rotate(180deg);
+.cs-course-input + img
+{
+    @apply hidden md:block absolute top-2.5 left-4 w-4 h-4;
 }
 
 .cs-course-select option {
     @apply pl-2 text-left;
 }
 
+.cs-course-arrow {
+    @apply bg-cs-red-dark w-8 sm:h-9 h-10 rounded-r-lg text-white;
+}
+
 .cs-course-phone-prefix {
     @apply
-    py-2.5
+    py-1.5
     placeholder:text-cs-red-dark
     text-cs-red-dark
     font-semibold
-    cs-fs-base
+    cs-fs-xs
     border-cs-red-dark
     border-2
     rounded-l-[30px]
@@ -809,16 +835,61 @@
 }
 .cs-course-phone-number {
     @apply
-    py-2.5
+    py-1.5
     placeholder:text-cs-red-dark
     text-cs-red-dark
     font-semibold
-    cs-fs-base
+    cs-fs-xs
     border-cs-red-dark
     border-2
     rounded-xl
     bg-cs-paper
-    pl-12
+    rounded-l-[30px]
+    md:rounded-l-none
+    w-full
+    pl-4
+    md:pl-4
+}
+
+.cs-course-checkbox {
+    @apply
+    w-4
+    h-4
+    text-cs-red-dark
+    bg-white border
+    border-cs-red-dark
+    rounded-md;
+}
+
+.cs-course-checkbox-label {
+    @apply
+    ms-2
+    uppercase
+    cs-fs-sm
+    font-bold
+    tracking-wider
+    text-black;
+}
+
+.cs-course-accordion-button {
+    @apply
+    mt-4
+    uppercase
+    py-2
+    rounded-[30px]
+    px-5
+    bg-cs-paper-dark
+    text-cs-red-dark;
+}
+
+.cs-course-accordion-content {
+    @apply
+    pb-5
+    text-sm
+    px-3
+    text-black
+    bg-cs-paper
+    cs-fs-sm;
 }
 
 .cs-course-submit {
@@ -827,13 +898,13 @@
     font-sans
     font-bold
     uppercase
-    cs-fs-base
+    cs-fs-sm
     tracking-wider
     rounded-xl
     bg-cs-red-main
     text-white
-    py-2.5
-    px-5
+    py-1.5
+    px-4
     border
     border-transparent
     text-center
@@ -851,14 +922,14 @@
     font-sans
     font-bold
     uppercase
-    cs-fs-base
+    cs-fs-sm
     tracking-wider
     bg-cs-paper-shade
     rounded-xl
     border-cs-red-main
     text-cs-red-main
-    py-2.5
-    px-5
+    py-1.5
+    px-4
     border-2
     bg-transparent
     text-center
