--- a/src/input.css
+++ b/src/input.css
@@ -952,25 +952,26 @@
     w-full
     box:w-auto
     box:rounded-[30px]
-    max-w-[650px]
+    max-w-[600px]
     gap-7;
 }
 
 .cs-personal-area-box {
     @apply
     w-full /* [param] */
-    box:w-[480px] /* [param] */
+    box:w-[510px] /* [param] */
     md:w-[600px] /* [param] */
     box:shadow-cs-all-around /* [param] */
     box:rounded-[30px]
     bg-cs-blue-main
-    min-w-[600px];
+    box:min-w-[500px]
+    md:min-w-[600px];
 }
 
 
 .cs-personal-accordion-header {
     @apply
-    py-2 pr-5 font-semibold text-white cs-fs-base min-h-10 pl-9;
+    py-2 pr-5 font-semibold text-white cs-fs-base min-h-10 pl-9 text-left gap-4;
 }
 
 .cs-personal-accordion-content {
@@ -982,17 +983,19 @@
 
 .cs-bible-area-box {
     @apply
-    w-full
-    md:w-auto
-    shadow-cs-all-around
+    w-full /* [param] */
+    box:w-[510px] /* [param] */
+    md:w-[600px] /* [param] */
+    box:shadow-cs-all-around /* [param] */
     box:rounded-xl
-    bg-cs-paper-dark
-    md:min-w-[650px];
+  bg-cs-paper-dark
+    box:min-w-[500px]
+    md:min-w-[600px];
 }
 
 .cs-bible-accordion-header {
     @apply
-    py-2 pl-4 pr-5 font-semibold text-black cs-fs-lg min-h-10 box:pl-9;
+    py-2 pl-4 pr-5 font-semibold text-black cs-fs-lg min-h-10 box:pl-9 gap-4 text-left;
 }
 
 
