fv: fix on input and accordion

--- a/src/input.css
+++ b/src/input.css
@@ -873,8 +873,7 @@
     border-2
     rounded-xl
     bg-cs-paper-shade
-    rounded-l-[30px]
-    md:rounded-l-none
+    rounded-l-none
     w-full
     pl-4
     md:pl-4
