--- a/src/input.css
+++ b/src/input.css
@@ -714,6 +714,10 @@
         w-full mt-2 mb-8;
     }
 
+    .cs-form-input-container.cs-form-small-container {
+        @apply w-1/3 min-w-[200px];
+    }
+
     .cs-form-input {
         @apply
         py-1.5
@@ -729,15 +733,18 @@
         rounded-r-xl
         bg-cs-paper-shade
         pl-4
-        md:pl-12
         w-full
         box:min-w-[400px]
         md:w-full;
     }
 
+    .cs-form-input.cs-form-input-icon {
+        @apply sm:pl-12;
+    }
+
     .cs-form-input + img
     {
-        @apply hidden md:block absolute top-2.5 left-4 w-4 h-4;
+        @apply hidden sm:block absolute top-2.5 left-4 w-4 h-4;
     }
 
     .cs-password-eye .hs-password-active {
@@ -830,14 +837,17 @@
     rounded-r-xl
     bg-cs-paper-shade
     pl-4
-    md:pl-12
-    w-full
-    sm:min-w-[400px];
+    w-full;
+}
+
+
+.cs-course-input.cs-course-input-icon {
+    @apply sm:pl-12;
 }
 
 .cs-course-input + img
 {
-    @apply hidden md:block absolute top-2.5 left-4 w-4 h-4;
+    @apply hidden sm:block absolute top-2.5 left-4 w-4 h-4;
 }
 
 .cs-course-select option {
@@ -845,7 +855,7 @@
 }
 
 .cs-course-arrow {
-    @apply w-8 h-10 text-white rounded-r-lg bg-cs-red-dark sm:h-9;
+    @apply w-8 h-10 text-white rounded-r-lg bg-cs-red-dark sm:h-10;
 }
 
 .cs-course-phone-prefix {
@@ -964,13 +974,21 @@
     px-5
     sm:px-8
     max-w-[800px] /* [param] */
-    rounded-[30px]
-    mt-16    
-    gap-16;
+    rounded-[30px];
+}
+
+.cs-accordion-manager {
+    @apply
+    mt-8
+    h-10
+    w-full
+    gap-2
+    mb-8;
 }
 
 .cs-personal-area-box {
     @apply
+    mb-16
     w-full /* [param] */ 
     shadow-cs-all-around /* [param] */
     rounded-[30px]
@@ -992,6 +1010,7 @@
 
 .cs-bible-area-box {
     @apply
+    mb-16
     w-full /* [param] */
     shadow-cs-all-around /* [param] */
     rounded-xl
